--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
         <div class="acc-a" hidden>
           <p>
             I have two office locations:<br>
-            <strong>Berkeley:</strong> 1605 Solano Ave, Berkeley, CA 94707<br>
-            <strong>Davis:</strong> 221 G Street, Davis, CA 95616
+            <strong>Berkeley:</strong> 1605 Solano Ave, Ste F, Berkeley, CA 94707<br>
+            <strong>Davis:</strong> 221 G Street, Ste 203, Davis, CA 95616
           </p>
         </div>
 
@@ -325,7 +325,7 @@
             <span class="cicon" aria-hidden="true">📍</span>
             <div>
               <p class="ck">Berkeley Office</p>
-              <p class="cv">1605 Solano Ave<br>Berkeley, CA 94707</p>
+              <p class="cv">1605 Solano Ave, Ste F<br>Berkeley, CA 94707</p>
             </div>
           </div>
 
@@ -333,7 +333,7 @@
              <span class="cicon" aria-hidden="true">📍</span>
              <div>
                <p class="ck">Davis Office</p>
-               <p class="cv">221 G Street<br>Davis, CA 95616</p>
+               <p class="cv">221 G Street, Ste 203<br>Davis, CA 95616</p>
              </div>
            </div>
 
